crates/types/tests/snapshots/builder_test__primitives-5.snap
---
source: crates/types/tests/builder_test.rs
expression: "& input"
---
{
  "ty": {
    "type": "Boolean"
  }
}
