crates/types/tests/snapshots/builder_test__primitives-6.snap
---
source: crates/types/tests/builder_test.rs
expression: "& input"
---
{
  "nullable": true,
  "ty": {
    "type": "Union",
    "partial": false,
    "operator": "AnyOf",
    "variants_types": [
      {
        "ty": {
          "type": "Boolean"
        }
      },
      {
        "ty": {
          "type": "Null"
        }
      }
    ]
  }
}
