crates/types/tests/snapshots/builder_test__primitives.snap
---
source: crates/types/tests/builder_test.rs
expression: "& input"
---
{
  "ty": {
    "type": "Null"
  }
}
