crates/types/tests/snapshots/builder_test__strings-5.snap
---
source: crates/types/tests/builder_test.rs
expression: "& input"
---
{
  "ty": {
    "type": "String",
    "format": "path"
  }
}
