crates/types/tests/snapshots/builder_test__strings-6.snap
---
source: crates/types/tests/builder_test.rs
expression: "& input"
---
{
  "ty": {
    "type": "String",
    "format": "ipv4"
  }
}
